# C

./: .gitignore  .markdownlint.yaml  AGENTS.md  About.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  _navbar.md  _playground.md  _sidebar.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  总纲.md  正文.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: deploy.yml  linkfix.yml  lint.yml  m2p.yml
code/杂/: 10_改进的BMI测试.c  12_简易计算器.c  8_BMI测试.c  也许是简易计算器.c
code/练习/: 1_字母金字塔_1.c  1_字母金字塔_2.c  2_三角形的判定.c  unk_质数扫描.c
code/语法和标准库/: 8_BMI测试.c  质因数分解.c
code/项目/Mdr_Lang/compiler_c/: CMakeLists.txt  README.md
code/项目/Mdr_Lang/compiler_c/include/: mdr_compiler.h
code/项目/Mdr_Lang/compiler_c/src/: main.c  mdr_compiler.c
code/项目/Mdr_Lang/compiler_c/tests/: smoke.ps1
docs/: About.md  index.md
docs/.vitepress/: config.mts  nscfg.mts
docs/public/: BingSiteAuth.xml
docs/杂项/: 前端.md  常见错误合集.md  插件.md  本教程历史.md  组件展示.md
小工具/: gitsync.sh
技术无关/: 1_编程交流群生存指南.md
教程/: 总纲.md  路线.md
教程/正文/: 每集视频名称.md
教程/番外/: 1_IEEE754.md  2_Unicode.md  3_VSCode+GCC.md  3_VSCode+gcc.md  77_关于进制.md
教程/示例代码/: linkfix.py  mdr.h
杂项/: 常见错误合集.md  本教程历史.md
正文/: 18_指针.md  1_在开始编程之前.md  2_一个简单的C程序.md  36_泛型.md  37_预处理器.md  3_C对象_初步.md  4_数据.md  64_算法的时间复杂度.md  6_字符串.md  74_ISO七层模型.md  75_TCP.md
正文/小示例/: 质因数分解.c  (+9 more)
番外/: 1_IEEE754.md  2_Unicode.md  3_VSCode+gcc.md
示例/: 10. 改进的BMI测试.c  18. bubble_sort.c  8. BMI测试.c
额外/: 1_IEEE754.md
(+863 files in other folders)
